--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,6 +6,12 @@
     }],
     "routes":[{
         "src":"/(.*)",
-        "dest":"/"
+        "dest":"/",
+        "methods":[
+            "GET",
+            "POST",
+            "PUT",
+            "DELETE"
+        ]
     }]
 }
