--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,12 +6,6 @@
     }],
     "routes":[{
         "src":"/(.*)",
-        "dest":"/",
-        "methods":[
-            "GET",
-            "POST",
-            "PUT",
-            "DELETE"
-        ]
+        "dest":"/"
     }]
 }
